fixed minor bug in line 62 where arrays spacing was off

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     
   }
   
-  .sqr {
+  .square {
     width: 30%;
     aspect-ratio: 1/1;
     border: 3px solid black;
